# python-calculator

./: setup.cfg
pythoncalculator/: __init__.py  subtract.py
tests/: test_subtract.py
